# cellnet

./: .gitignore  LICENSE  README.md  cellnet.py  cellnet.yml  eval.py  final-releases.sh  final-runs.sh  labelstudio.yml  pre-images.py  pre_points.py  pyproject.toml  release.py  release.yml  train.py
cellnet/: __init__.py  data.py  debug.py  internet.py  plot.py  release.py
results/cellnet/: 240513-191800-000556.ipynb  results.csv  results_100e.csv
results/cellnet/240517-062111/: ------------51318413.SLURM
results/cellnet/240519-192456/: results.csv
results/cellnet/240522-090449-001746/: results.csv
results/cellnet/240522-162455-001645/: results.csv
results/cellnet/240522-162806-010750/: results.csv
results/cellnet/240522-170214-001144/: results.csv
results/cellnet/240522-170339-002733/: results.csv
results/cellnet/240522-170440-002630/: results.csv
results/cellnet/240522-170605-022808/: results.csv
results/cellnet/240524-080856-002811/: cellnet.ipynb  results.csv
results/cellnet/240524-080923-022917/: cellnet.ipynb  results.csv
results/cellnet/240524-081006-000835/: cellnet.ipynb  results.csv
results/cellnet/240525-154332-003001/: cellnet.ipynb  results.csv
results/cellnet/240527-054839-001210/: cellnet.ipynb  results.csv
results/cellnet/240527-054921-023238/: cellnet.ipynb  results.csv
results/cellnet/240527-054936-003324/: cellnet.ipynb  results.csv
results/cellnet/240528-103426-overfit-1/: results.csv
results/cellnet/240528-103443-valaugs-1/: results.csv
results/cellnet/240528-111224-valaugs-1/: results.csv
results/cellnet/240528-111236-sigma-val-1/: cellnet.ipynb  results.csv
results/cellnet/240603-054345-sigma3_7-val-all/: cellnet.ipynb  results.csv
results/cellnet/240603-140648-rmbad-all/: cellnet.ipynb  results.csv
results/cellnet/240606-072824-rmbad-val-all-test/: cellnet.py
results/cellnet/240628-151817-rmbad-test/: cellnet.py
results/cellnet/240701-063054-rmbad/: cellnet.py
results/cellnet/240701-123334-rmbad/: cellnet.py
results/cellnet/240703-044046-rmbad-test/: cellnet.ipynb  p2L-1.npy  p2L-4.npy  results.csv
results/cellnet/240708-160621-rmbad-test/: p2L-2.npy  results.csv
results/cellnet/240708-160908-rmbad/: cellnet.ipynb
results/cellnet/240708-162418-rmbad-test/: p2L-1.npy  p2L-2.npy  p2L-4.npy  results.csv
results/train/240528-111159-overfit-1/: cellnet.ipynb  (+1 more)
util/: data.py  plot.py
utility/: agreement-ac-bo.py  disagreeing-annotations.py
utility/rmbad/: README.md  bad-random-0.05.json  bad-random-0.15.json  p2L-2.npy  review-sf.csv  rmbad-check.py  rmbad-generate_test.py
(+83 files in other folders)
